Fixed table spacing.

--- a/ptn/static/ptnotes.css
+++ b/ptn/static/ptnotes.css
@@ -97,7 +97,7 @@ section {
 
 table {
   border-collapse: collapse;
-  border-spacing: 10px;
+  border-spacing: .25em;
 }
 
 td {
@@ -105,7 +105,7 @@ td {
 }
 
 table, tr, td, th {
-  padding: 10px;
+  padding: .25em;
   border: 1px solid #eee;
 }
 
